--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 
 <head>
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet"
@@ -9,11 +10,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@600;700&display=swap"
     rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-button.css">
+<a id="robbu-whatsapp-button" target="_blank" href="https://api.whatsapp.com/send?phone=71993766553&text=Ol%C3%A1%20Nutri,%20gostaria%20de%20tirar%20mais%20d%C3%BAvidas!">
+  <img src="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-icon.svg">
+</a>
+
+<link rel="shortcut icon" href="../src/assets/android-chrome-192x192.png" type="image/png">
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <title>React App</title>
+  
+  <title>Gustavo Queiroz</title>
 </head>
 
 <body>
